# Kulyk-goit-PythonWeb-HW-07

./: alembic.ini  config.ini  main.py  my_select.py  pyproject.toml  readme.txt  seed.py
alembic/: env.py
alembic/versions/: c637e5547d6c_init.py
src/: db.py  models.py
