[tool.poetry]
name = "hw-7-python-web"
version = "0.1.0"
description = ""
authors = ["evgen-kulik <e.kulik.atom@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_7_python_web"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
faker = "^19.2.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"  #це драйвер бази даних PostgreSQL для Python, тобто одним з його основних завдань є
#автоматичне підстроювання типів під час складання запитів та отримання відповідей між PostgreSQL та Python.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
